promo-crossroad__item: fix horizontal alignment
add same 20px left and right margins to item instead single right 40px

--- a/blocks/promo/promo-crossroad/promo-crossroad.css
+++ b/blocks/promo/promo-crossroad/promo-crossroad.css
@@ -14,16 +14,11 @@
     line-height: 1.5;
 
     max-width: 220px;
-    margin: 0 40px 60px 0;
+    margin: 0 20px 60px;
 
     text-align: center;
 
     color: #000;
-}
-
-.promo-crossroad__item:last-child
-{
-    margin-right: 0;
 }
 
 .promo-crossroad__title-link
